saint-lascivious.github.io: pwapp, refactor and reshuffle
Changes to be committed:
 - renamed:    .html.orig/265.html.orig -> .formatted/265.html
 - renamed:    .html.orig/404.html.orig -> .formatted/404.html
 - renamed:    .html.orig/connecttosainternet.html.orig -> .formatted/connecttosainternet.html
 - renamed:    .html.orig/filtereddns.html.orig -> .formatted/filtereddns.html
 - renamed:    .html.orig/frequentlyaskedquestions.html.orig -> .formatted/frequentlyaskedquestions.html
 - renamed:    .html.orig/index.html.orig -> .formatted/index.html
 - renamed:    .html.orig/newsandupdates.html.orig -> .formatted/newsandupdates.html
 - renamed:    .html.orig/pokedexoverdns.html.orig -> .formatted/pokedexoverdns.html
 - renamed:    .html.orig/portsandprotocols.html.orig -> .formatted/portsandprotocols.html
 - renamed:    .html.orig/projects.html.orig -> .formatted/projects.html
 - renamed:    resources/javascript/pwapp-serviceworker.js -> .formatted/pwapp-serviceworker.js
 - new file:   .formatted/pwapp.js
 - renamed:    .html.orig/reportaproblem.html.orig -> .formatted/reportaproblem.html
 - renamed:    .html.orig/technologies.html.orig -> .formatted/technologies.html
 - renamed:    .html.orig/testsainternet.html.orig -> .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - new file:   pwapp-serviceworker.min.js
 - new file:   pwapp.min.js
 - modified:   reportaproblem.html
 - deleted:    resources/javascript/pwapp-serviceworker.min.js
 - deleted:    resources/javascript/pwapp.js
 - deleted:    resources/javascript/pwapp.min.js
 - renamed:    resources/manifests/sainternet.webmanifest -> sainternet.webmanifest
 - modified:   technologies.html
 - modified:   testsai

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - index.html
+  sainternet.xyz - 404.html
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
@@ -11,31 +11,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
+    <title>Pokémon #404</title>
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#F44336">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#F44336">
+    <meta name="theme-color" content="#03A9F4">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-404-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-404-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-404-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-404-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-404-16x16.png">
+    <link rel="icon" sizes="any" href="resources/icons/favicon-404.ico">
 
-    <link rel="canonical" href="https://sainternet.xyz/index.html">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
+    <link rel="canonical" href="https://sainternet.xyz/404.html">
+    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.red-blue.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.red-blue.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.light_blue-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,16 +56,15 @@
 
     <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp">
     <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp">
-    <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp">
-    <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp">
-    <link rel="preload" as="image" href="resources/images/terminal.webp" type="image/webp">
 
     <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/load-fonts.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/random_phrase.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/pwapp.min.js" async></script>
 
+    <link rel="prefetch" href="265.html" as="document">
+    <link rel="prerender" href="265.html">
+
+    <link rel="prefetch" href="index.html" as="document">
+    <link rel="prerender" href="index.html">
     <link rel="prefetch" href="newsandupdates.html" as="document">
     <link rel="prerender" href="newsandupdates.html">
     <link rel="prefetch" href="filtereddns.html" as="document">
@@ -71,8 +73,6 @@
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
     <link rel="prerender" href="projects.html">
-
-    <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
 
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
@@ -85,58 +85,78 @@
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
+            <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
+          <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
+        </nav>
+        <span class="embiggen mdl-layout-title">???</span>
+        <nav class="mdl-navigation">
+          <a class="embiggen mdl-navigation__link" href="265.html#pokemon265">???</a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon404"><b>???</b></a>
         </nav>
       </div>
-      <div class="ribbon red-ribbon"></div>
+      <div class="ribbon light_blue-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
-            <div class="sainternet-catchphrase">
-              <i id="sainternet-phrases">…breaking the Internet, since 2016.</i>
+            <div class="sainternet-crumbs">
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="welcome">
+        <div class="sainternet-container mdl-grid" id="pokemon404">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Welcome</span></h3>
+            <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <picture>
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              <source srcset="resources/images/luxio.webp" type="image/webp" media="(prefers-color-scheme: light)">
+              <source srcset="resources/images/luxio.png" type="image/png" media="(prefers-color-scheme: light)">
+              <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <source srcset="resources/images/luxio-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
+              <source srcset="resources/images/luxio-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
+              <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
             </picture>
             <p align="center">
-              Welcome to Sainternet.
+              A wild <b>Luxio</b> appeared!
             </p>
             <p>
-              Hello, I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.
+              Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="example">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
-              This site is one of those things.
+              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
+            <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            <pre>dig +short txt 404.pokedex @dns.sainternet.xyz</pre>
             <p>
-              Take a look around, there's a navigational panel to your left and/or above (desktop and mobile layouts may differ), you may find something that interests you here.
+              Example Pokédex over DNS queries using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
             </p>
+            <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            <pre>RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
+            </p>
+            <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            <pre>nslookup -type=txt 404.pokedex dns.sainternet.xyz</pre>
           </div>
         </div>
       </main>
@@ -186,5 +206,6 @@
         </ul>
       </div>
     </footer>
+    <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
   </body>
 </html>
