--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - 265.html
+  sainternet.xyz - index.html
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
@@ -11,35 +11,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Pokémon #265</title>
+    <title>sainternet.xyz</title>
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#E91C63">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#E91C63">
+    <meta name="theme-color" content="#F44336">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-265-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-265-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-265-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-265-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-265-16x16.png">
-    <link rel="icon" sizes="any" href="resources/icons/favicon-265.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="favicon.ico">
 
-    <link rel="canonical" href="https://sainternet.xyz/265.html">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz, wurmple, Wurmple">
+    <link rel="canonical" href="https://sainternet.xyz/index.html">
+    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.pink-red.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.pink-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.red-blue.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.red-blue.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,17 +50,18 @@
     <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
+    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp">
     <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp">
     <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/terminal.webp" type="image/webp">
 
-    <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
+    <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
+    <script type="text/javascript" src="resources/javascript/random_phrase.min.js" defer></script>
+    <script type="text/javascript" src="resources/javascript/pwapp.min.js" defer></script>
 
-    <link rel="prefetch" href="404.html" as="document">
-    <link rel="prerender" href="404.html">
-
-    <link rel="prefetch" href="index.html" as="document">
-    <link rel="prerender" href="index.html">
     <link rel="prefetch" href="newsandupdates.html" as="document">
     <link rel="prerender" href="newsandupdates.html">
     <link rel="prefetch" href="filtereddns.html" as="document">
@@ -74,6 +70,8 @@
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
     <link rel="prerender" href="projects.html">
+
+    <link rel="manifest" href="sainternet.webmanifest">
 
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
@@ -86,77 +84,58 @@
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
-        </nav>
-        <span class="embiggen mdl-layout-title">???</span>
-        <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>???</b></a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="ribbon pink-ribbon"></div>
+      <div class="ribbon red-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokemon265"><b>Pokémon #265</b></a><br><a class="embiggen" href="#example">Example Queries</a>
+            <div class="sainternet-catchphrase">
+              <i id="sainternet-phrases">…breaking the Internet, since 2016.</i>
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="pokemon265">
+        <div class="sainternet-container mdl-grid" id="welcome">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
+            <h3><span class="embiggen">Welcome</span></h3>
             <picture>
               <source srcset="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
               <source srcset="resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
               <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
               <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
               <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
             </picture>
             <p align="center">
-              A wild <b>Wurmple</b> appeared!
+              Welcome to Sainternet.
             </p>
             <p>
-              Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
+              Hello, I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.
             </p>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="example">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
-              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
+              This site is one of those things.
             </p>
-            <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
-            <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
             <p>
-              Example Pokédex over DNS queries using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
+              Take a look around, there's a navigational panel to your left and/or above (desktop and mobile layouts may differ), you may find something that interests you here.
             </p>
-            <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
-            <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
-            <p>
-              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
-            </p>
-            <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
-            <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
           </div>
         </div>
       </main>
@@ -206,6 +185,5 @@
         </ul>
       </div>
     </footer>
-    <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
   </body>
 </html>
