--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - 404.html
+  sainternet.xyz - portsandprotocols.html
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
@@ -11,33 +11,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Pokémon #404</title>
+    <title>sainternet.xyz</title>
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#03A9F4">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#03A9F4">
+    <meta name="theme-color" content="#8BC34A">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-404-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-404-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-404-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-404-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-404-16x16.png">
-    <link rel="icon" sizes="any" href="resources/icons/favicon-404.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="favicon.ico">
 
-    <link rel="canonical" href="https://sainternet.xyz/404.html">
+    <link rel="canonical" href="https://sainternet.xyz/portsandprotocols.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.light_blue-red.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.light_green-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.light_green-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/img.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/table.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/table.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
@@ -55,14 +52,8 @@
     <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
-    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp">
-    <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp">
-
     <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
-
-    <link rel="prefetch" href="265.html" as="document">
-    <link rel="prerender" href="265.html">
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
@@ -90,7 +81,7 @@
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
@@ -100,65 +91,71 @@
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQ</a>
+          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="#portsandprotocols"> <b>- Ports and Protocols</b></a>
+          <a class="embiggen mdl-navigation__link" href="technologies.html"> - Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html"> - Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
-        </nav>
-        <span class="embiggen mdl-layout-title">???</span>
-        <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="265.html#pokemon265">???</a>
-          <a class="embiggen mdl-navigation__link" href="#pokemon404"><b>???</b></a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="ribbon light_blue-ribbon"></div>
+      <div class="ribbon light_green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#portsandprotocols"><b>Ports and Protocols</b></a>
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="pokemon404">
+        <div class="sainternet-container mdl-grid" id="portsandprotocols">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
-            <picture>
-              <source srcset="resources/images/luxio.webp" type="image/webp" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/luxio.png" type="image/png" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/luxio-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/luxio-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-            </picture>
-            <p align="center">
-              A wild <b>Luxio</b> appeared!
-            </p>
+            <h3><span class="embiggen">Ports and Protocols</span></h3>
             <p>
-              Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+              Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
+            <table>
+              <tr>
+                <th>Transport</th>
+                <th>Address</th>
+                <th>Protocol & Port</th>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>TCP 443</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>UDP 443</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
+                <td>119.224.127.171<br>::ffff:119.224.127.171<br>::ffff:77e0:7fab</td>
+                <td>TCP 53</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>TCP 853</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
+                <td>119.224.127.171<br>::ffff:119.224.127.171<br>::ffff:77e0:7fab</td>
+                <td>UDP 53</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>UDP 853</td>
+              </tr>
+            </table>
            </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="example">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
-            <p>
-              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
-            </p>
-            <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
-            <pre>dig +short txt 404.pokedex @dns.sainternet.xyz</pre>
-            <p>
-              Example Pokédex over DNS queries using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
-            </p>
-            <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
-            <pre>RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz</pre>
-            <p>
-              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
-            </p>
-            <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
-            <pre>nslookup -type=txt 404.pokedex dns.sainternet.xyz</pre>
-          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
