--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - technologies.html
+  sainternet.xyz - 265.html
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
@@ -11,29 +11,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
+    <title>Pokémon #265</title>
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#4CAF50">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#4CAF50">
+    <meta name="theme-color" content="#E91C63">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-265-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-265-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-265-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-265-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-265-16x16.png">
+    <link rel="icon" sizes="any" href="resources/icons/favicon-265.ico">
 
-    <link rel="canonical" href="https://sainternet.xyz/technologies.html">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
+    <link rel="canonical" href="https://sainternet.xyz/265.html">
+    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz, wurmple, Wurmple">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.green-red.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.green-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.pink-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.pink-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
@@ -51,8 +54,14 @@
     <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
+    <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp">
+
     <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
+
+    <link rel="prefetch" href="404.html" as="document">
+    <link rel="prerender" href="404.html">
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
@@ -80,7 +89,7 @@
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
           </nav>
         </div>
       </header>
@@ -90,82 +99,64 @@
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="#technologies"> <b>- Technologies</b></a>
-          <a class="embiggen mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="reportaproblem.html"> - Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
+        </nav>
+        <span class="embiggen mdl-layout-title">???</span>
+        <nav class="mdl-navigation">
+          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>???</b></a>
         </nav>
       </div>
-      <div class="ribbon green-ribbon"></div>
+      <div class="ribbon pink-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#technologies"><b>Technologies</b></a><br><a class="embiggen" href="#dnsdist">dnsdist</a>, <a class="embiggen" href="#dnsproxy">dnsproxy</a>, <a class="embiggen" href="#piholeftl">pihole-FTL</a>, <a class="embiggen" href="#unbound">unbound</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokemon265"><b>Pokémon #265</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="technologies">
+        <div class="sainternet-container mdl-grid" id="pokemon265">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Technologies</span></h3>
+            <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
+            <picture>
+              <source srcset="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
+              <source srcset="resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
+              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
+              <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
+              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+            </picture>
+            <p align="center">
+              A wild <b>Wurmple</b> appeared!
+            </p>
             <p>
-              Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
+              Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="dnsdist">
+        <div class="sainternet-container mdl-grid" id="example">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">dnsdist</span></h3>
+            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
-              <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
+              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
+            <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
             <p>
-              dnsdist is a highly DNS-, <a href="https://wikipedia.org/wiki/Denial-of-service_attack">DoS</a>- and abuse-aware loadbalancer. Its goal in life is to route traffic to the best server, delivering top performance to legitimate users while shunting or blocking abusive traffic.
+              Example Pokédex over DNS queries using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
             </p>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="dnsproxy">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">dnsproxy</span></h3>
+            <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
             <p>
-              <a href="https://github.com/AdguardTeam/dnsproxy">dnsproxy</a>
+              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
             </p>
-            <p>
-              A simple DNS proxy server that supports all existing DNS protocols including DNS-over-TLS, DNS-over-HTTPS, DNSCrypt, and DNS-over-QUIC. Moreover, it can work as a DNS-over-HTTPS, DNS-over-TLS or DNS-over-QUIC server.
-            </p>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="piholeftl">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">pihole-FTL</span></h3>
-            <p>
-              <a href="https://github.com/pi-hole/FTL">pihole-FTL</a>
-            </p>
-            <p>
-              FTLDNS (pihole-FTL) provides an interactive API and also generates statistics for <a href="https://pi-hole.net/">Pi-hole®</a>'s Web interface.
-            </p>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="unbound">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">unbound</span></h3>
-            <p>
-              <a href="https://github.com/NLnetLabs/unbound">unbound</a>
-            </p>
-            <p>
-              Unbound is a validating, recursive, caching DNS resolver. It is designed to be fast and lean and incorporates modern features based on open standards.
-            </p>
-           </div>
+            <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
