--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - reportaproblem.html
+  sainternet.xyz - connecttosainternet.html
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
@@ -13,8 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#3F51B5">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#3F51B5">
+    <meta name="theme-color" content="#FFEB3B">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
@@ -25,11 +24,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
     <link rel="icon" sizes="any" href="favicon.ico">
 
-    <link rel="canonical" href="https://sainternet.xyz/reportaproblem.html">
+    <link rel="canonical" href="https://sainternet.xyz/connecttosainternet.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.indigo-red.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.indigo-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.yellow-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.yellow-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
@@ -91,80 +90,134 @@
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="#connecttosainternet"> <b>- Connect to Sainternet</b></a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="technologies.html"> - Technologies</a>
           <a class="embiggen mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="#reportaproblem"> <b>- Report a Problem</b></a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html"> - Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="ribbon indigo-ribbon"></div>
+      <div class="ribbon yellow-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#reportaproblem"><b>Report a Problem</b></a><br><a class="embiggen" href="#bugreport">Bug Report</a>, <a class="embiggen" href="#blacklist">Blacklist</a>, <a class="embiggen" href="#whitelist">Whitelist</a>, <a class="embiggen" href="#securitydisclosure">Security Disclosure</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a class="embiggen" href="#androidprivatedns">Android Private DNS</a>, <a class="embiggen" href="#appleiosmacos">Apple iOS/MacOS</a>, <a class="embiggen" href="#googlechromechromium">Google Chrome/Chromium</a>, <a class="embiggen" href="#mozillafirefox">Mozilla Firefox</a>
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="reportaproblem">
+        <div class="sainternet-container mdl-grid" id="connecttosainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Report a Problem</span></h3>
+            <h3><span class="embiggen">Connect to Sainternet</span></h3>
             <p>
-              The following describes various ways in which you can help <b>sainternet.xyz</b> improve.
+              The following describes connecting to Sainternet Filtered DNS in several platforms, services.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="bugreport">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Bug Report</span></h3>
-            <p>
-              Found a bug on <b>sainternet.xyz</b>?
+            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Android<br>Private DNS</span></h3>
+            <p align="center">
+              Android 9 (Pie) or higher required.
             </p>
-            <p>
-              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=bug&template=BUG_REPORT.md&title=sainternet.xyz%3A+bug+report">Bug Report</a> to help <b>sainternet.xyz</b> improve.
-            </p>
+            <ol>
+              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
+              <li>Search for "Private DNS"</li>
+              <li>Select "Private DNS"</li>
+              <li>Select "Designated Private DNS"</li>
+              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
+              <li>Done</li>
+            </ol>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="blacklist">
+        <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Blacklist Proposal</span></h3>
-            <p>
-              Are one or more domains accessible via <code>dns.sainternet.xyz</code>, that you feel shouldn't be?
+            <h3><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
+            <p align="center">
+              Apple iOS 14/macOS Big Sur or higher required.
             </p>
+            <ol>
+              <li>Select a DNS Profile from below (if you don't know which one to choose, just select <a href="#recommendeddnsprofile">DNS over HTTPS/TLS</a>)</li>
+              <li>Download the selected DNS Profile (click the icon to download)</li>
+              <li>Navigate to the downloaded DNS Profile</li>
+              <li>Open the DNS Profile</li>
+              <li>Agree to any/all prompts</li>
+              <li>Done</li>
+            </ol>
+            <div class="sainternet-list-action mdl-list">
+              <div class="mdl-list__item">
+                <span class="embiggen mdl-list__item-primary-content">
+                  <span>DNS over HTTPS</span>
+                </span>
+                <a class="mdl-list__item-secondary-action"  href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+              </div>
+              <div class="mdl-list__item">
+                <span class="embiggen mdl-list__item-primary-content">
+                  <span>DNS over TLS</span>
+                </span>
+                <a class="mdl-list__item-secondary-action"  href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+              </div>
+              <div class="mdl-list__item" id="recommendeddnsprofile">
+                <span class="embiggen mdl-list__item-primary-content">
+                  <span>DNS over HTTPS/TLS</span>
+                </span>
+                <a class="mdl-list__item-secondary-action"  href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+              </div>
+            </div>
             <p>
-              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=blacklist&template=BLACKLIST.md&title=sainternet.xyz%3A+blacklist+proposal">Blacklist Proposal</a>.
+              Notes:
             </p>
+            <ol>
+              <li>These profiles are not digitally signed and that is expected/normal.</li>
+              <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
+            </ol>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="whitelist">
+        <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Whitelist Proposal</span></h3>
-            <p>
-              Are one or more domains <i>inaccessible</i> via <code>dns.sainternet.xyz</code>, that you feel <i>should</i> be?
-            </p>
-            <p>
-              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=whitelist&template=WHITELIST.md&title=sainternet.xyz%3A+whitelist+proposal">Whitelist Proposal</a>.
-            </p>
+            <h3><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
+            <ol>
+              <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
+              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Select "Privacy and security"</li>
+              <li>Select "Use secure DNS"</li>
+              <li>Select "Choose another provider"</li>
+              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
+              <li>Done</li>
+            </ol>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="securitydisclosure">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Security Disclosure</span></h3>
+            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla<br>Firefox</span></h3>
+            <ol>
+              <li>Menu <icon class="fa-solid fa-bars"></icon></li>
+              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Select "General"</li>
+              <li>Select "Network Settings"</li>
+              <li>Select "Settings"</li>
+              <li>Select "Enable DNS over HTTPS"</li>
+              <li>Select "Use Provider"</li>
+              <li>Select "Custom"</li>
+              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
+              <li>Select "OK"</li>
+              <li>Done</li>
+            </ol>
             <p>
-              Disclosures relating to the security (or <in>in</in>security rather) of <code>sainternet.xyz</code> can be directed in confidence to the following address:
+              Notes:
             </p>
-            <p>
-              <a class="embiggen" href="mailto:admin@sainternet.xyz" target="_blank" rel="noopener noreferrer">admin@sainternet.xyz</a>
-            </p>
+            <ol>
+              <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
+            </ol>
            </div>
         </div>
       </main>
