--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -13,8 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FF9800">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#FF9800">
+    <meta name="theme-color" content="#FF9800">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
